5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1785_1596.log
== TEST (2019-05-30 11:06:27) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas")))
i = 0 #contador de ciclo
j = 0#contador da soma
a = min(v)
while(v[i] != min(v)):
	j = v[i] + j
	i = i + 1
c = j/(size(v)-1)
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:06:37) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
j = 0#contador da soma
a = min(v)
while(v[i] != min(v)):
	j = v[i] + j
	i = i + 1
c = j/(size(v)-1)
print(round(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:07:19) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
j = 0#contador da soma
a = min(v)
while(v[i] != min(v)):
	j = v[i] + j
	i = i + 1
c = j/(size(v)-1)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:09:41) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = v[i] #contador da soma
a = min(v)
while(i < size(v)):
	if(v[i] != min(v))
	soma = v[i] + j
	i = i + 1
c = j/(size(v)-1)
print(j)
-- ERROR:
File "XXXX", line 7
    if(v[i] != min(v))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:09:50) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = v[i] #contador da soma
a = min(v)
while(i < size(v)):
	if(v[i] != min(v))
	soma = v[i] + j
	i = i + 1
c = j/(size(v)-1)
print(j)
-- ERROR:
File "XXXX", line 7
    if(v[i] != min(v))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:09:56) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = v[i] #contador da soma
a = min(v)
while(i < size(v)):
	if(v[i] != min(v)):
	soma = v[i] + j
	i = i + 1
c = j/(size(v)-1)
print(j)
-- ERROR:
File "XXXX", line 8
    soma = v[i] + j
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:10:03) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = v[i] #contador da soma
a = min(v)
while(i < size(v)):
	if(v[i] != min(v)):
		soma = v[i] + j
		i = i + 1
c = j/(size(v)-1)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:10:34) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = 0 #contador da soma
a = min(v)
while(i < size(v)):
	if(v[i] != min(v)):
		soma = v[i] + soma
		i = i + 1
c = j/(size(v)-1)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:11:00) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = 0 #contador da soma
a = min(v)
while(i < size(v)):
	if(v[i] != min(v)):
		soma = v[i] + soma
		i = i + 1
c = j/(size(v)-1)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:11:15) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = 0 #contador da soma
a = min(v)
while(i < size(v)):
	if(v[i] != min(v)):
		soma = v[i] + soma
		i = i + 1

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:13:13) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = 0 #contador da soma
a = sum(v) - min(v)

print(round(a/size(v),2)
	
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:13:18) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = 0 #contador da soma
a = sum(v) - min(v)

print(round(a/size(v),2)
	
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:13:33) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = 0 #contador da soma
a = sum(v) - min(v)

print(round(a/size(v),2))
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:14:26) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = 0 #contador da soma
a = sum(v) - min(v)
b = size(v) - 1
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:14:56) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = 0 #contador da soma
a = sum(v) - min(v)
b = size(v) - 1
print(round(a/b),2))
	
		
-- ERROR:
File "XXXX", line 7
    print(round(a/b),2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:15:21) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = 0 #contador da soma
a = sum(v) - min(v)
b = size(v) - 1
c = a/b
print(round(c,2))
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:15:33) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = 0 #contador da soma
a = sum(v) - min(v)
b = size(v) - 1
c = a/b
print(round(c,2))
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:15:45) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
i = 0 #contador de ciclo
soma = 0 #contador da soma
a = sum(v) - min(v)
b = size(v) - 1
c = a/b
print(round(c,2))
	
		
-- EXECUTION TIME:
0.37715
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
